[package]
name = "locha_mesh_client"
version = "0.0.1"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "Off-Grid P2P Mesh Radio Communications"
homepage = "http://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/locha-mesh-client"
repository = "https://github.com/resolvingarchitecture/locha-mesh-client"
publish = true
readme = "README.md"
keywords = ["p2p-radio","locha-mesh","mesh-network","decentralized","offgrid"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
failure = "0.1.5"
exitfailure = "0.5.1"

ra_common = "0.0.2"

[dev-dependencies]
assert_cmd = "0.10"